// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-open-with/ContentOpenWith render() should render the ExecuteForm if we have data to post 1`] = `
<Internationalize>
  <div
    className="be bcow"
    data-testid="bcow-content"
    id="uniqueId"
  >
    <OpenWithButton
      displayIntegration="Adobe"
      error={null}
      isLoading={true}
      onClick={[Function]}
    />
    <ExecuteForm
      executePostData={
        Object {
          "params": Array [
            Object {
              "foo": "bar",
            },
          ],
          "url": "foo.com",
        }
      }
      id="uniqueId"
      onSubmit={[Function]}
    />
  </div>
</Internationalize>
`;

exports[`elements/content-open-with/ContentOpenWith render() should render the Open With button if there is one or fewer integrations 1`] = `
<Internationalize>
  <div
    className="be bcow"
    data-testid="bcow-content"
    id="uniqueId"
  >
    <OpenWithButton
      displayIntegration="Adobe"
      error={null}
      isLoading={false}
      onClick={[Function]}
    />
  </div>
</Internationalize>
`;

exports[`elements/content-open-with/ContentOpenWith render() should render the Open With button when loading 1`] = `
<Internationalize>
  <div
    className="be bcow"
    data-testid="bcow-content"
    id="uniqueId"
  >
    <OpenWithButton
      displayIntegration={null}
      error={null}
      isLoading={true}
      onClick={[Function]}
    />
  </div>
</Internationalize>
`;

exports[`elements/content-open-with/ContentOpenWith render() should render the Open With dropdown if there is more than one integration 1`] = `
<Internationalize>
  <div
    className="be bcow"
    data-testid="bcow-content"
    id="uniqueId"
  >
    <OpenWithDropdownMenu
      integrations={
        Array [
          "Adobe",
          "Google Suite",
        ]
      }
      onClick={[Function]}
    />
  </div>
</Internationalize>
`;

exports[`elements/content-open-with/ContentOpenWith render() should render the PortalContainer if the integration is errored 1`] = `
<Internationalize>
  <div
    className="be bcow"
    data-testid="bcow-content"
    id="uniqueId"
  >
    <OpenWithDropdownMenu
      integrations={
        Array [
          "Adobe",
          "Google Suite",
        ]
      }
      onClick={[Function]}
    />
    <IntegrationPortalContainer
      hasError={true}
    />
  </div>
</Internationalize>
`;

exports[`elements/content-open-with/ContentOpenWith render() should render the PortalContainer if the integration is loading 1`] = `
<Internationalize>
  <div
    className="be bcow"
    data-testid="bcow-content"
    id="uniqueId"
  >
    <OpenWithDropdownMenu
      integrations={
        Array [
          "Adobe",
          "Google Suite",
        ]
      }
      onClick={[Function]}
    />
    <IntegrationPortalContainer
      hasError={false}
    />
  </div>
</Internationalize>
`;
